styles.css
* {
    box-sizing: border-box;
}

@font-face {
    font-family: 'dm_serif_displayregular';
    src: url('fonts/dmserifdisplay-regular-webfont.woff2') format('woff2'),
        url('fonts/dmserifdisplay-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'titillium_webregular';
    src: url('fonts/titilliumweb-regular-webfont.woff2') format('woff2'),
        url('fonts/titilliumweb-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'titillium_websemibold';
    src: url('fonts/titilliumweb-semibold-webfont.woff2') format('woff2'),
        url('fonts/titilliumweb-semibold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}


body {
    display: flex;
    font-family: 'dm_serif_displayregular', 'Times New Roman', Times, serif;
    margin: 0;
}

.head {
    background: no-repeat url("images/castle.jpg");
    background-size: cover;
    height: 100vh;
    width: 40%;
    position: relative;
    text-align: center;
}

.head div {
    padding-left: 20px;
    padding-right: 20px;
}

.logo {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    width: 100%;
    top: 20%;
    color: white;
    background-color: rgb(0, 0, 0, 0.5);
    font-size: 1.5rem;
}

#castle-icon {
    height: 4rem;
}

.photo-credit {
    color: white;
    position: absolute;
    width: 100%;
    bottom: 0rem;
    text-align: center;
    font-family: 'titillium_webregular', Arial, Helvetica, sans-serif;
}

a {
    all: unset;
    text-decoration: underline;
}

a:hover {
    cursor: pointer;
    color: bisque;
}

.main-content {
    font-family: 'titillium_websemibold', Arial, Helvetica, sans-serif;
    height: 100vh;
    width: 60%;
    background-color: rgb(255, 240, 223);
    display: flex;
    flex-direction: column;
    justify-content: center;
    overflow: auto;
}

.intro {
    margin-left: 40px;
    margin-right: 120px;
    margin-bottom: 20px;
    overflow: auto;
}

.form-input {
    background-color: rgb(255, 255, 255);
    border-color: ivory;
    box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
    width: 100%;
    padding-left: 40px;
    padding-right: 120px;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-bottom: 20px;
}

.form-input div {
    display: flex;
    flex-wrap: wrap;
}

.input {
    display: flex;
    flex-direction: column;
}

.form-input label {
    margin-bottom: 0;
    font-size: 0.85rem;
    font-family: 'titillium_webregular', Arial, Helvetica, sans-serif;
}

.form-input div div:nth-child(odd) {
    margin-right: 100px;
}

input[type="text"],
input[type="email"],
input[type="password"] {
    appearance: none;
    position: relative;
    margin-bottom: 30px;
    font-family: 'titillium_webregular', Arial, Helvetica, sans-serif;
    font-size: 100%;
    width: 200px;
    padding: 0 1px;
    border: 1px solid #E5E7EB;
    border-radius: 3px;
}

input[type="text"]:focus,
input[type="email"]:focus,
input[type="password"]:focus {
    background: rgba(0, 0, 0, 0.03);
    border: 1px solid rgb(95, 64, 60, 0.5);
}

input+span {
    position: relative;
}

input:invalid:required {
    border-color: rgb(255, 0, 0, 0.5);
}

input:valid {
    border: 1px solid rgb(34, 52, 38, 0.5);
}

input[type="text"]:invalid+span.validation::after {
    font-size: 0.7rem;
    position: absolute;
    content: "Username must be 2-20 characters";
    color: rgba(0, 0, 0, 0.5);
    top: -30px;
    left: 0px;
}

input[type="email"]:invalid+span.validation::after {
    font-size: 0.7rem;
    position: absolute;
    content: "Email must be in example@email.com";
    color: rgba(0, 0, 0, 0.5);
    top: -30px;
    left: 0px;
}

input[id="pwd"]:invalid+span.validation::after {
    font-size: 0.7rem;
    position: absolute;
    content: "Must have at least 8 characters, including 1 uppercase, 1 lowercase, 1 number and 1 symbol";
    color: rgba(0, 0, 0, 0.5);
    top: -30px;
    left: 0px;
}

.subscription label,
.subscription input {
    appearance: none;
    margin-top: 30px;
    margin-bottom: 10px;
}

input[type="checkbox"] {
    position: relative;
    margin-top: 33px;
    width: 1em;
    height: 1em;
    border: 1px solid #E5E7EB;
    vertical-align: -2px;
    color: rgba(121, 143, 156, 1);
    cursor: pointer;
}

input[type="checkbox"]::before {
    content: "\2713";
    position: absolute;
    font-size: 1.2em;
    right: -1px;
    top: -0.3em;
    visibility: hidden;
}

input[type="checkbox"]:checked::before {
    visibility: visible;
}

button {
    all: unset;
    margin: 20px 0px 20px 40px;
    border-radius: 25px;
    padding: 10px 40px;
    color: white;
    background-color: rgba(121, 143, 156, 1);
    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
    transition: transform 0.2s ease-in-out;
}

button:hover {
    background-color: rgb(146, 98, 93, 1);
    cursor: pointer;
}

button:active {
    background-color: rgb(95, 64, 60);
    transform: translateY(3px);
}

.user-action p {
    margin-left: 40px;
}

.login:hover {
    color: rgba(121, 143, 156, 1);
}

